--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
-    "react-multi-carousel": "^2.8.5",
-    "react-query": "^3.39.3"
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
+    "@tanstack/react-query": "^5.51.24",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
